overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,10 +7,10 @@ main,html,body,#__next{
 .orb{
   background-image: linear-gradient(#0F1682,#07F36B,#1FFDD2);
 }
-.property-container::-webkit-scrollbar{
+::-webkit-scrollbar{
   @apply w-1
 }
-.property-container::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb{
   @apply bg-neon-green rounded-full
 }
 
